<resources>
    <string name="app_name">MVP</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="help">Help</string>
    <string name="problem">Problems</string>
    <string name="solution">Solution</string>
    <string name="reflection">Reflection</string>
    <string name="distractions">Distractions</string>
    <string name="mood_tracker">Mood Tracker</string>
    <string name="self_soothe">Self-soothe</string>
    <string name="title">Title</string>
    <string name="instructions">Instructions</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="category">Category</string>
    <string name="add_new">Add new</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="tried">Tried?</string>
    <string name="select_category">Categorize your problem</string>
    <string name="reflection_question">What have you learnt?</string>
    <string name="category_work">Work</string>
    <string name="category_love">Love</string>
    <string name="category_health">Health</string>
    <string name="category_business">Business</string>
    <string name="category_family">Family</string>
    <string name="category_money">Money</string>
    <string name="category_friendship">Friendship</string>
    <string name="category_other">Other</string>

    <string name="add_fragment_title">Add %1$s</string>
    <string name="edit_fragment_title">Edit %1$s</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>

    <string name="final_solution">Mark as Final Solution</string>
    <string name="final_solution_confirmation">This solution will be marked as final and all other candidate solutions will be deleted.</string>
    <string name="final_solution_not_doable">Would you like to go back to the list and find a solution that can be implemented?</string>

    <string name="resolve_problem">Resolve Problem</string>
    <string name="resolved_problems">Resolved Problems</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="ask_solvability">Can you do something about this problem?</string>
    <string name="can_you_do_it">Can this solution be done?</string>
    <string name="to_problem_list">Go to Problem List</string>
    <string name="to_solutions">Go to Solutions</string>
    <string name="evaluate_solution">Evaluate Solution</string>
    <string name="evaluate_instruction">Evaluate the solutions you\'ve come up with</string>
    <string name="go_back">Go Back</string>
    <string name="how_to_distract">How do i distract myself?</string>
    <string name="activities_list">Activities List</string>

    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </string>

    <string name="sln_instruction1">1. Write down every possible solution that comes to mind; It doesn\'t matter how good or bad it seems.</string>
    <string name="sln_instruction2">2. Shortlist the solutions that seem the most feasible.</string>
    <string name="sln_instruction3">3. Evaluate the pros &amp; cons of each feasible solution</string>
    <string name="sln_instruction4">4. Choose the ultimate solution that can be implemented</string>
    <string name="first_stage_instruction">Write down as many solutions as you can think of</string>
    <string name="second_stage_instruction">Evaluate the pros &amp; cons of each solution and delete the ones that seem less feasible. Then, decide on the ultimate solution that you think would be the most helpful.</string>


    <string name="problem_title_req">Title <font color='#FF0000'>*</font></string>
    <string name="problem_description_req">Description <font color='#FF0000'>*</font></string>
    <string name="reflection_req">Reflect on the experience <font color='#FF0000'>*</font></string>
    <string name="pros_req">Pros <font color='#FF0000'>*</font></string>
    <string name="cons_req">Cons <font color='#FF0000'>*</font></string>

    <string name="anxiety_trend">Anxiety Level Trend</string>
    <string name="how_are_you">Record your anxiety level</string>
    <string name="anxiety_level">Anxiety Level</string>
    <string name="anxiety_added">Successfully logged!</string>
    <string-array name="mood_level">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>