<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        tools:context=".ui.fragments.AddSolutionFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/solution_title_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:hint="@string/problem_title_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/solution_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:inputType="textAutoComplete|textCapWords"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/solution_description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:hint="@string/problem_description_req"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/solution_title_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/solution_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:lines="10"
                android:maxLines="12" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/can_you_do_it"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/solution_description_label" />

        <RadioGroup
            android:id="@+id/yes_or_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/btn_yes"
            android:layout_marginTop="@dimen/margin_between_elements"
            app:layout_constraintTop_toBottomOf="@+id/question">

            <RadioButton
                android:id="@+id/btn_yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes"/>

            <RadioButton
                android:id="@+id/btn_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no"/>

        </RadioGroup>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="@dimen/margin_between_elements"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yes_or_no" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>