<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        tools:context=".ui.fragments.SolutionsFragment">

        <TextView
            android:id="@+id/problem_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Title of the problem" />

        <TextView
            android:id="@+id/solution_title"
            style="@style/Header"
            android:layout_marginStart="@dimen/margin_between_elements"
            android:layout_marginTop="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_between_elements"
            android:text="@string/title"
            app:layout_constraintEnd_toStartOf="@+id/solution_tried"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/problem_title" />

        <TextView
            android:id="@+id/solution_tried"
            style="@style/Header"
            android:layout_marginTop="@dimen/margin_start"
            android:text="@string/tried"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/solution_title"
            app:layout_constraintTop_toBottomOf="@id/problem_title" />

        <View
            android:id="@+id/divider"
            style="@style/Divider"
            android:layout_marginTop="@dimen/margin_between_elements"
            app:layout_constraintBottom_toTopOf="@+id/solutionsRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/solution_tried" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/solutionsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarSize="4dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <Button
            android:id="@+id/toProblemListBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_between_elements"
            android:text="@string/to_problem_list"
            app:layout_constraintBottom_toTopOf="@+id/addSolutionButton"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addSolutionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_between_elements"
            android:layout_marginBottom="@dimen/margin_between_elements"
            android:contentDescription="@string/add_new"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@android:color/white" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>