<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        tools:context=".ui.fragments.SolvedProblemsFragment">

        <TextView
            android:id="@+id/problem_title"
            style="@style/Header"
            android:layout_marginStart="@dimen/margin_between_elements"
            android:text="@string/title"
            app:layout_constraintEnd_toStartOf="@+id/problem_date"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/problem_date"
            style="@style/Header"
            android:layout_below="@+id/problem_title"
            android:layout_marginStart="@dimen/margin_between_elements"
            android:text="@string/date"
            android:textAlignment="center"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/problem_title"
            app:layout_constraintEnd_toStartOf="@+id/problem_category"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/problem_category"
            style="@style/Header"
            android:layout_marginStart="@dimen/margin_between_elements"
            android:text="@string/category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/problem_date"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            style="@style/Divider"
            android:layout_marginTop="@dimen/margin_between_elements"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/problem_category" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarSize="4dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>